# jrnld

./: .gitignore  CMakeLists.txt  README.md  build.ninja  daemon.c  daemon.h  j.c  jrnl.c  jrnl.h  jrnld.c  jrnld.h
